# Skypro_Course_4_Shop

./: README.md  pyproject.toml
shop/: errors.py  items.csv  shop.py
tests/: bad_file_1.csv  bad_file_2.csv  conftest.py  test.csv  test_class_item.py  test_class_keyboard.py  test_class_phone.py
